[gd_scene load_steps=7 format=3 uid="uid://i28mfgee7hxj"]

[ext_resource type="Script" uid="uid://dancnc1emwcwr" path="res://scripts/door.gd" id="1_83dcw"]
[ext_resource type="Texture2D" uid="uid://vggvewao3tix" path="res://assets/door/door_green.png" id="2_la1wf"]
[ext_resource type="Texture2D" uid="uid://dwt4oc0tba2md" path="res://assets/door/door_open_green.png" id="3_18pbm"]
[ext_resource type="Texture2D" uid="uid://bv0lb8wuyx3ra" path="res://assets/door/door_shut_green.png" id="4_q5w8r"]
[ext_resource type="AudioStream" uid="uid://dpkbm5mhi0jiq" path="res://sfx/doorOpen_2.ogg" id="5_18pbm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvdjg"]
size = Vector2(34, 48)

[node name="Door" type="Area2D"]
script = ExtResource("1_83dcw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -30)
shape = SubResource("RectangleShape2D_uvdjg")

[node name="DoorSprite" type="Sprite2D" parent="."]
position = Vector2(0, -30)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_la1wf")

[node name="DoorOpenSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -30)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_18pbm")

[node name="DoorShutSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -30)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_q5w8r")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_18pbm")
volume_db = -20.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
